--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "moment": "^2.29.4"
+    "knex": "^2.2.0",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
+    "objection": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
