--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm start",
-    "dev": "npm run nodemon"
+    "start": "node index.js",
+    "dev": "npm run nodemon index.js"
   },
   "keywords": [],
   "author": "",
